fixed catalogo-container overflow

--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,7 @@ h2 {
 .catalogo-container {
    background-color: #1f1f1f;
    padding: 0 15% 40px 15%;
+   overflow: hidden;
 }
 
 .product {
